docker: ensure that the container JVM defaults to UTF-8 charset
Add some speculatively agressive optimizations for OpenJDK8, among
which to run the JIT across methods  after 10 invocationsrather than
the default 10e4 times.